docs/api/qiskit-ibm-runtime/0.43/ibm-backend.mdx
---
title: IBMBackend (v0.43)
description: API reference for qiskit_ibm_runtime.IBMBackend in qiskit-ibm-runtime v0.43
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.IBMBackend
---

# IBMBackend

<Class id="qiskit_ibm_runtime.IBMBackend" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L60-L510" signature="IBMBackend(configuration, service, api_client, instance=None, calibration_id=None)" modifiers="class">
  Bases: [`BackendV2`](/docs/api/qiskit/qiskit.providers.BackendV2 "(in Qiskit v2.2)")

  Backend class interfacing with an IBM Quantum backend.

  <Admonition title="Note" type="note">
    *   You should not instantiate the `IBMBackend` class directly. Instead, use the methods provided by an [`QiskitRuntimeService`](qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") instance to retrieve and handle backends.
  </Admonition>

  This class represents an IBM Quantum backend. Its attributes and methods provide information about the backend. For example, the [`status()`](#qiskit_ibm_runtime.IBMBackend.status "qiskit_ibm_runtime.IBMBackend.status") method returns a `BackendStatus` instance. The instance contains the `operational` and `pending_jobs` attributes, which state whether the backend is operational and also the number of jobs in the server queue for the backend, respectively:

  ```python
  status = backend.status()
  is_operational = status.operational
  jobs_in_queue = status.pending_jobs
  ```

  Here is list of attributes available on the `IBMBackend` class:

  > *   name: backend name.
  >
  > *   backend\_version: backend version in the form X.Y.Z.
  >
  > *   num\_qubits: number of qubits.
  >
  > *   target: A [`qiskit.transpiler.Target`](/docs/api/qiskit/qiskit.transpiler.Target "(in Qiskit v2.2)") object for the backend.
  >
  > *   basis\_gates: list of basis gates names on the backend.
  >
  > *   gates: list of basis gates on the backend.
  >
  > *   local: backend is local or remote.
  >
  > *   simulator: backend is a simulator.
  >
  > *   conditional: backend supports conditional operations.
  >
  > *   open\_pulse: backend supports open pulse.
  >
  > *   memory: backend supports memory.
  >
  > *   coupling\_map (list): The coupling map for the device
  >
  > *   supported\_instructions (List\[str]): Instructions supported by the backend.
  >
  > *   dynamic\_reprate\_enabled (bool): whether delay between primitives can be set dynamically (ie via `rep_delay`). Defaults to False.
  >
  > *   rep\_delay\_range (List\[float]): 2d list defining supported range of repetition delays for backend in μs. First entry is lower end of the range, second entry is higher end of the range. Optional, but will be specified when `dynamic_reprate_enabled=True`.
  >
  > *   default\_rep\_delay (float): Value of `rep_delay` if not specified by user and `dynamic_reprate_enabled=True`.
  >
  > *   n\_uchannels: Number of u-channels.
  >
  > *   u\_channel\_lo: U-channel relationship on device los.
  >
  > *   meas\_levels: Supported measurement levels.
  >
  > *   qubit\_lo\_range: Qubit lo ranges for each qubit with form (min, max) in GHz.
  >
  > *   meas\_lo\_range: Measurement lo ranges for each qubit with form (min, max) in GHz.
  >
  > *   dt: Qubit drive channel timestep in nanoseconds.
  >
  > *   dtm: Measurement drive channel timestep in nanoseconds.
  >
  > *   rep\_times: Supported repetition times (program execution time) for backend in μs.
  >
  > *   meas\_kernels: Supported measurement kernels.
  >
  > *   discriminators: Supported discriminators.
  >
  > *   hamiltonian: An optional dictionary with fields characterizing the system hamiltonian.
  >
  > *   channel\_bandwidth (list): Bandwidth of all channels (qubit, measurement, and U)
  >
  > *   acquisition\_latency (list): Array of dimension n\_qubits x n\_registers. Latency (in units of dt) to write a measurement result from qubit n into register slot m.
  >
  > *   conditional\_latency (list): Array of dimension n\_channels \[d->u->m] x n\_registers. Latency (in units of dt) to do a conditional operation on channel n from register slot m
  >
  > *   meas\_map (list): Grouping of measurement which are multiplexed
  >
  > *   sample\_name (str): Sample name for the backend
  >
  > *   n\_registers (int): Number of register slots available for feedback (if conditional is True)
  >
  > *   register\_map (list): An array of dimension n\_qubits X n\_registers that specifies whether a qubit can store a measurement in a certain register slot.
  >
  > *   configurable (bool): True if the backend is configurable, if the backend is a simulator
  >
  > *   credits\_required (bool): True if backend requires credits to run a job.
  >
  > *   online\_date (datetime): The date that the device went online
  >
  > *   display\_name (str): Alternate name field for the backend
  >
  > *   description (str): A description for the backend
  >
  > *   tags (list): A list of string tags to describe the backend
  >
  > *   version: version of `Backend` class (Ex: 1, 2)
  >
  > *   channels: An optional dictionary containing information of each channel – their purpose, type, and qubits operated on.
  >
  > *   parametric\_pulses (list): A list of pulse shapes which are supported on the backend. For example: `['gaussian', 'constant']`
  >
  > *   processor\_type (dict): Processor type for this backend. A dictionary of the form `{"family": <str>, "revision": <str>, segment: <str>}` such as `{"family": "Canary", "revision": "1.0", segment: "A"}`.
  >
  >     > *   family: Processor family of this backend.
  >     > *   revision: Revision version of this processor.
  >     > *   segment: Segment this processor belongs to within a larger chip.

  IBMBackend constructor.

  **Parameters**

  *   **configuration** ([*QasmBackendConfiguration*](models-qasm-backend-configuration "qiskit_ibm_runtime.models.backend_configuration.QasmBackendConfiguration")) – Backend configuration.
  *   **service** ([*qiskit\_runtime\_service.QiskitRuntimeService*](qiskit-runtime-service "qiskit_ibm_runtime.qiskit_runtime_service.QiskitRuntimeService")) – Instance of QiskitRuntimeService.
  *   **api\_client** (*RuntimeClient*) – IBM client used to communicate with the server.
  *   **calibration\_id** (*str | None*) – An optional calibration id to use for this backend
  *   **instance** (*str | None*)

  ## Attributes

  ### calibration\_id

  <Attribute id="qiskit_ibm_runtime.IBMBackend.calibration_id">
    The calibration id used for this backend.
  </Attribute>

  ### coupling\_map

  <Attribute id="qiskit_ibm_runtime.IBMBackend.coupling_map">
    Return the [`CouplingMap`](/docs/api/qiskit/qiskit.transpiler.CouplingMap "(in Qiskit v2.2)") object
  </Attribute>

  ### dt

  <Attribute id="qiskit_ibm_runtime.IBMBackend.dt">
    Return the system time resolution of input signals

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The input signal timestep in seconds. If the backend doesn’t define `dt`, `None` will be returned.
  </Attribute>

  ### dtm

  <Attribute id="qiskit_ibm_runtime.IBMBackend.dtm">
    Return the system time resolution of output signals

    **Returns**

    The output signal timestep in seconds.

    **Return type**

    dtm
  </Attribute>

  ### id\_warning\_issued

  <Attribute id="qiskit_ibm_runtime.IBMBackend.id_warning_issued" attributeValue="False" />

  ### instruction\_durations

  <Attribute id="qiskit_ibm_runtime.IBMBackend.instruction_durations">
    Return the [`InstructionDurations`](/docs/api/qiskit/qiskit.transpiler.InstructionDurations "(in Qiskit v2.2)") object.
  </Attribute>

  ### instructions

  <Attribute id="qiskit_ibm_runtime.IBMBackend.instructions">
    A list of Instruction tuples on the backend of the form `(instruction, (qubits)`
  </Attribute>

  ### max\_circuits

  <Attribute id="qiskit_ibm_runtime.IBMBackend.max_circuits">
    This property used to return the max\_experiments value from the backend configuration but this value is no longer an accurate representation of backend circuit limits. New fields will be added to indicate new limits.
  </Attribute>

  ### meas\_map

  <Attribute id="qiskit_ibm_runtime.IBMBackend.meas_map">
    Return the grouping of measurements which are multiplexed

    This is required to be implemented if the backend supports Pulse scheduling.

    **Returns**

    The grouping of measurements which are multiplexed

    **Return type**

    meas\_map
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit_ibm_runtime.IBMBackend.num_qubits">
    Return the number of qubits the backend has.
  </Attribute>

  ### operation\_names

  <Attribute id="qiskit_ibm_runtime.IBMBackend.operation_names">
    A list of instruction names that the backend supports.
  </Attribute>

  ### operations

  <Attribute id="qiskit_ibm_runtime.IBMBackend.operations">
    A list of [`Instruction`](/docs/api/qiskit/qiskit.circuit.Instruction "(in Qiskit v2.2)") instances that the backend supports.
  </Attribute>

  ### options

  <Attribute id="qiskit_ibm_runtime.IBMBackend.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](#qiskit_ibm_runtime.IBMBackend.run "qiskit_ibm_runtime.IBMBackend.run") method.
  </Attribute>

  ### provider

  <Attribute id="qiskit_ibm_runtime.IBMBackend.provider">
    Return the backend provider.

    **Returns**

    the provider responsible for the backend.

    **Return type**

    provider
  </Attribute>

  ### service

  <Attribute id="qiskit_ibm_runtime.IBMBackend.service">
    Return the `service` object

    **Returns**

    instance of QiskitRuntimeService

    **Return type**

    service
  </Attribute>

  ### target

  <Attribute id="qiskit_ibm_runtime.IBMBackend.target">
    A [`qiskit.transpiler.Target`](/docs/api/qiskit/qiskit.transpiler.Target "(in Qiskit v2.2)") object for the backend.

    **Returns**

    Target
  </Attribute>

  ### version

  <Attribute id="qiskit_ibm_runtime.IBMBackend.version" attributeValue="2" />

  ### name

  <Attribute id="qiskit_ibm_runtime.IBMBackend.name">
    Name of the backend.
  </Attribute>

  ### description

  <Attribute id="qiskit_ibm_runtime.IBMBackend.description">
    Optional human-readable description.
  </Attribute>

  ### online\_date

  <Attribute id="qiskit_ibm_runtime.IBMBackend.online_date">
    Date that the backend came online.
  </Attribute>

  ### backend\_version

  <Attribute id="qiskit_ibm_runtime.IBMBackend.backend_version">
    Version of the backend being provided. This is not the same as `BackendV2.version`, which is the version of the `Backend` abstract interface.
  </Attribute>

  ## Methods

  ### \_\_call\_\_

  <Function id="qiskit_ibm_runtime.IBMBackend.__call__" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L440-L442" signature="__call__()">
    Call self as a function.

    **Return type**

    [*IBMBackend*](#qiskit_ibm_runtime.IBMBackend "qiskit_ibm_runtime.ibm_backend.IBMBackend")
  </Function>

  ### check\_faulty

  <Function id="qiskit_ibm_runtime.IBMBackend.check_faulty" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L444-L476" signature="check_faulty(circuit)">
    Check if the input circuit uses faulty qubits or edges.

    **Parameters**

    **circuit** ([*QuantumCircuit*](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v2.2)")) – Circuit to check.

    **Raises**

    **ValueError** – If an instruction operating on a faulty qubit or edge is found.

    **Return type**

    None
  </Function>

  ### configuration

  <Function id="qiskit_ibm_runtime.IBMBackend.configuration" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L411-L435" signature="configuration()">
    Return the backend configuration.

    Backend configuration contains fixed information about the backend, such as its name, number of qubits, basis gates, coupling map, quantum volume, etc.

    The schema for backend configuration can be found in [Qiskit/ibm-quantum-schemas/backend\_configuration](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json).

    More details about backend configuration properties can be found here [QasmBackendConfiguration](/docs/api/qiskit/1.4/qiskit.providers.models.QasmBackendConfiguration).

    **IBM backends may also include the following properties:**

    *   **`supported_features`: a list of strings of supported features like “qasm3” for dynamic**

        circuits support.

    *   **`parallel_compilation`: a boolean of whether or not the backend can process multiple**

        jobs at once. Parts of the classical computation will be parallelized.

    **Returns**

    The configuration for the backend.

    **Return type**

    [*QasmBackendConfiguration*](models-qasm-backend-configuration "qiskit_ibm_runtime.models.backend_configuration.QasmBackendConfiguration")
  </Function>

  ### get\_translation\_stage\_plugin

  <Function id="qiskit_ibm_runtime.IBMBackend.get_translation_stage_plugin" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L506-L510" signature="get_translation_stage_plugin()">
    Return the default translation stage plugin name for IBM backends.

    **Return type**

    str
  </Function>

  ### properties

  <Function id="qiskit_ibm_runtime.IBMBackend.properties" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L331-L385" signature="properties(refresh=False, datetime=None)">
    Return the backend properties, subject to optional filtering.

    This data describes qubits properties (such as T1 and T2), gates properties (such as gate length and error), and other general properties of the backend.

    The schema for backend properties can be found in [Qiskit/ibm-quantum-schemas/backend\_properties](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_properties_schema.json).

    **Parameters**

    *   **refresh** (*bool*) – If `True`, re-query the server for the backend properties. Otherwise, return a cached version.
    *   **datetime** (*datetime | None*) – By specifying datetime, this function returns an instance of the `BackendProperties` whose timestamp is closest to, but older than, the specified datetime.

    **Returns**

    The backend properties or `None` if the backend properties are not currently available.

    **Raises**

    *   **TypeError** – If an input argument is not of the correct type.
    *   **NotImplementedError** – If datetime is specified when cloud runtime is used.

    **Return type**

    [*BackendProperties*](models-backend-properties "qiskit_ibm_runtime.models.backend_properties.BackendProperties") | None
  </Function>

  ### qubit\_properties

  <Function id="qiskit_ibm_runtime.IBMBackend.qubit_properties" signature="qubit_properties(qubit)">
    Return QubitProperties for a given qubit.

    If there are no defined or the backend doesn’t support querying these details this method does not need to be implemented.

    **Parameters**

    **qubit** (*int | List\[int]*) – The qubit to get the `QubitProperties` object for. This can be a single integer for 1 qubit or a list of qubits and a list of `QubitProperties` objects will be returned in the same order

    **Returns**

    The `QubitProperties` object for the specified qubit. If a list of qubits is provided a list will be returned. If properties are missing for a qubit this can be `None`.

    **Raises**

    **NotImplementedError** – if the backend doesn’t support querying the qubit properties

    **Return type**

    [*QubitProperties*](/docs/api/qiskit/qiskit.providers.QubitProperties "(in Qiskit v2.2)") | *List*\[[*QubitProperties*](/docs/api/qiskit/qiskit.providers.QubitProperties "(in Qiskit v2.2)")]
  </Function>

  ### refresh

  <Function id="qiskit_ibm_runtime.IBMBackend.refresh" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L318-L329" signature="refresh()">
    Retrieve the newest backend configuration and refresh the current backend target.

    **Return type**

    None
  </Function>

  ### run

  <Function id="qiskit_ibm_runtime.IBMBackend.run" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L494-L504" signature="run(*args, **kwargs)">
    **Raises**

    **IBMBackendError** – The run() method is no longer supported.

    **Return type**

    None
  </Function>

  ### set\_options

  <Function id="qiskit_ibm_runtime.IBMBackend.set_options" signature="set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    **AttributeError** – If the field passed in is not part of the options
  </Function>

  ### status

  <Function id="qiskit_ibm_runtime.IBMBackend.status" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L387-L409" signature="status()">
    Return the backend status.

    <Admonition title="Note" type="note">
      If the returned `BackendStatus` instance has `operational=True` but `status_msg="internal"`, then the backend is accepting jobs but not processing them.
    </Admonition>

    **Returns**

    The status of the backend.

    **Raises**

    **IBMBackendApiProtocolError** – If the status for the backend cannot be formatted properly.

    **Return type**

    [*BackendStatus*](models-backend-status "qiskit_ibm_runtime.models.backend_status.BackendStatus")
  </Function>

  ### target\_history

  <Function id="qiskit_ibm_runtime.IBMBackend.target_history" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.43/qiskit_ibm_runtime/ibm_backend.py#L306-L316" signature="target_history(datetime=None)">
    A [`qiskit.transpiler.Target`](/docs/api/qiskit/qiskit.transpiler.Target "(in Qiskit v2.2)") object for the backend.

    **Returns**

    Target with properties found on datetime

    **Parameters**

    **datetime** (*datetime | None*)

    **Return type**

    [*Target*](/docs/api/qiskit/qiskit.transpiler.Target "(in Qiskit v2.2)")
  </Function>
</Class>

